// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fill list assets component should link ERC-20 asset 1`] = `
<div>
  150
   
  <a
    class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-0 cVrEKF"
    href="/tokens/0x12345"
  >
    WETH
  </a>
</div>
`;

exports[`fill list assets component should link ERC-721 asset 1`] = `
<div>
  1
   
  <a
    class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-0 cVrEKF"
    href="/tokens/0x12345"
  >
    CK
  </a>
</div>
`;

exports[`fill list assets component should render for ERC-20 asset 1`] = `
<div>
  150
   
  WETH
</div>
`;

exports[`fill list assets component should render for ERC-721 asset 1`] = `
<div>
  1
   
  CK
</div>
`;

exports[`fill list assets component should render for multiple assets 1`] = `Multiple Assets`;
